[gd_scene load_steps=15 format=3 uid="uid://bauegx3xiajpq"]

[ext_resource type="Script" uid="uid://cekp4hhxmbbay" path="res://Escenas/Peleas/player.gd" id="1_1avs2"]
[ext_resource type="Texture2D" uid="uid://bb40buwumvvtx" path="res://Recursos/Sanson.png" id="1_j1yls"]
[ext_resource type="Texture2D" uid="uid://kd4ahxrmsrjm" path="res://Recursos/sanson_00.png" id="2_k8hwq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0h544"]
atlas = ExtResource("2_k8hwq")
region = Rect2(92, 61, 46, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w6ij"]
atlas = ExtResource("2_k8hwq")
region = Rect2(46, 0, 46, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_1avs2"]
atlas = ExtResource("1_j1yls")
region = Rect2(46, 0, 46, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_3phhw"]
atlas = ExtResource("2_k8hwq")
region = Rect2(46, 61, 46, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_is6en"]
atlas = ExtResource("2_k8hwq")
region = Rect2(92, 0, 46, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8hwq"]
atlas = ExtResource("1_j1yls")
region = Rect2(0, 0, 46, 61)

[sub_resource type="SpriteFrames" id="SpriteFrames_7w6ij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h544")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h544")
}],
"loop": false,
"name": &"hit_kick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w6ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1avs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1avs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w6ij")
}],
"loop": false,
"name": &"hit_punch",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3phhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is6en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is6en")
}],
"loop": false,
"name": &"hit_upercut",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8hwq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8hwq")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1yls"]
size = Vector2(17, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1avs2"]
size = Vector2(23, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fuplt"]
size = Vector2(22, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0w0n"]
size = Vector2(17, 20)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_1avs2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7w6ij")
animation = &"hit_upercut"
autoplay = "idle"
offset = Vector2(-8, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_j1yls")

[node name="Hitboxes" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="PunchShape" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2(-19.5, -7.5)
shape = SubResource("RectangleShape2D_1avs2")
disabled = true
debug_color = Color(0.930994, 0.234165, 0.311919, 0.42)

[node name="KickShape" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2(-19, 13)
shape = SubResource("RectangleShape2D_fuplt")
disabled = true
debug_color = Color(0.929412, 0.223529, 0.313726, 0.419608)

[node name="UpercutShape" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2(-16.5, -13)
shape = SubResource("RectangleShape2D_b0w0n")
disabled = true
debug_color = Color(0.930994, 0.234165, 0.311919, 0.42)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="Hitboxes" to="." method="_on_punch_body_entered"]
